--- a/test-seq-speed.html
+++ b/test-seq-speed.html
@@ -20,7 +20,7 @@ limitations under the License.
 	left: 0px;
 	width: 100px;
 	height: 100px;
-	background-color: #FAA;
+	background-color: lightsteelblue;
 	position: absolute;
 }
 
@@ -40,7 +40,17 @@ limitations under the License.
 	top: 300px;
 }
 
+#expectation {
+  position: absolute;
+  top: 0px;
+  left: 200px;
+  width: 100px;
+  height: 400px;
+  background: red;
+}
 </style>
+
+<div id=expectation></div>
 
 <div>
 	<div id="a" class="anim a"></div>
