--- a/test-seq-speed.html
+++ b/test-seq-speed.html
@@ -17,27 +17,27 @@ limitations under the License.
 <!DOCTYPE html>
 <style>
 .anim {
-	left: 0px;
-	width: 100px;
-	height: 100px;
-	background-color: lightsteelblue;
-	position: absolute;
+  left: 0px;
+  width: 100px;
+  height: 100px;
+  background-color: lightsteelblue;
+  position: absolute;
 }
 
 #a {
-	top: 0px
+  top: 0px
 }
 
 #b {
-	top: 100px;
+  top: 100px;
 }
 
 #c {
-	top: 200px;
+  top: 200px;
 }
 
 #d {
-	top: 300px;
+  top: 300px;
 }
 
 #expectation {
@@ -53,28 +53,32 @@ limitations under the License.
 <div id=expectation></div>
 
 <div>
-	<div id="a" class="anim a"></div>
-	<div id="b" class="anim b"></div>
+  <div id="a" class="anim a"></div>
+  <div id="b" class="anim b"></div>
 </div>
 
 <div id="fromTemplate">
-	<div id="c" class="anim a"></div>
-	<div id="d" class="anim b"></div>
+  <div id="c" class="anim a"></div>
+  <div id="d" class="anim b"></div>
 </div>
 
 <script src="web-animation.js"></script>
 <script>
 
-var a1 = new Animation(document.querySelector("#a"), {left: ["100px", "200px"]}, 0.6);
-var a2 = new Animation(document.querySelector("#b"), {left: ["100px", "200px"]}, 0.5);
-var a3 = new Animation(document.querySelector("#c"), {left: ["100px", "200px"]}, 0.5);
-var a4 = new Animation(document.querySelector("#d"), {left: ["100px", "200px"]}, 0.3);
+var a1 = new Animation(document.querySelector("#a"), {left: ["100px", "200px"]},
+    0.6);
+var a2 = new Animation(document.querySelector("#b"), {left: ["100px", "200px"]},
+    0.5);
+var a3 = new Animation(document.querySelector("#c"), {left: ["100px", "200px"]},
+    0.5);
+var a4 = new Animation(document.querySelector("#d"), {left: ["100px", "200px"]},
+    0.3);
 var pgroup1 = new ParGroup([a1, a2], {name: "p1"});
 var pgroup2 = new ParGroup([a3, a4], {name: "p2"});
 var sgroup = new SeqGroup([pgroup1, pgroup2], {name: "s"});
 
 window.setTimeout(function() {
-	sgroup.timing.playbackRate = 2;
-	sgroup.play();
+  sgroup.timing.playbackRate = 2;
+  sgroup.play();
 }, 2000);
 </script>
