--- a/test-seq-speed.html
+++ b/test-seq-speed.html
@@ -50,7 +50,7 @@ limitations under the License.
 }
 </style>
 
-<div id=expectation></div>
+<div id="expectation"></div>
 
 <div>
   <div id="a" class="anim a"></div>
