--- a/test/testcases/test-seq-speed.html
+++ b/test/testcases/test-seq-speed.html
@@ -75,6 +75,10 @@ var a4 = new Animation(document.querySelector("#d"), {left: ["100px", "200px"]},
     0.3);
 var pgroup1 = new ParGroup([a1, a2], {name: "p1"});
 var pgroup2 = new ParGroup([a3, a4], {name: "p2"});
-new SeqGroup([pgroup1, pgroup2], {name: "s"});
+var sgroup = new SeqGroup([pgroup1, pgroup2], {name: "s"});
 
+window.setTimeout(function() {
+  sgroup.timing.playbackRate = 2;
+  sgroup.play();
+}, 2000);
 </script>
