--- a/test/testcases/test-seq-speed.html
+++ b/test/testcases/test-seq-speed.html
@@ -75,10 +75,6 @@ var a4 = new Animation(document.querySelector("#d"), {left: ["100px", "200px"]},
     0.3);
 var pgroup1 = new ParGroup([a1, a2], {name: "p1"});
 var pgroup2 = new ParGroup([a3, a4], {name: "p2"});
-var sgroup = new SeqGroup([pgroup1, pgroup2], {name: "s"});
+new SeqGroup([pgroup1, pgroup2], {name: "s", playbackRate: 2});
 
-window.setTimeout(function() {
-  sgroup.timing.playbackRate = 2;
-  sgroup.play();
-}, 2000);
 </script>
