--- a/test/testcases/test-seq-speed.html
+++ b/test/testcases/test-seq-speed.html
@@ -62,7 +62,7 @@ limitations under the License.
   <div id="d" class="anim b"></div>
 </div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var a1 = new Animation(document.querySelector("#a"), {left: ["100px", "200px"]},
