--- a/test/testcases/test-seq-speed.html
+++ b/test/testcases/test-seq-speed.html
@@ -63,6 +63,7 @@ limitations under the License.
 </div>
 
 <script src="../../web-animations.js"></script>
+<script src="../anim-test-pre.js"></script>
 <script>
 
 var a1 = new Animation(document.querySelector("#a"), {left: ["100px", "200px"]},
