--- a/test/testcases/test-seq-speed.html
+++ b/test/testcases/test-seq-speed.html
@@ -62,6 +62,8 @@ limitations under the License.
   <div id="d" class="anim b"></div>
 </div>
 
+<div style="height:450px"></div>
+
 <script src="../../web-animations.js"></script>
 <script src="../anim-test-pre.js"></script>
 <script>
