--- a/test/testcases/auto-test-seq-speed.html
+++ b/test/testcases/auto-test-seq-speed.html
@@ -71,16 +71,16 @@ limitations under the License.
 var effect = [{left: "100px"}, {left: "200px"}];
 
 var a1 = new Animation(
-    document.querySelector("#a"), effect, 1.0);
+    document.querySelector("#a"), effect, {duration: 1.0, fill: "forwards"});
 var a2 = new Animation(
-    document.querySelector("#b"), effect, 2.0);
+    document.querySelector("#b"), effect, {duration: 2.0, fill: "forwards"});
 var a3 = new Animation(
-    document.querySelector("#c"), effect, 1.0);
+    document.querySelector("#c"), effect, {duration: 1.0, fill: "forwards"});
 var a4 = new Animation(
-    document.querySelector("#d"), effect, 2.0);
-var pgroup1 = new ParGroup([a1, a2], {name: "p1"});
-var pgroup2 = new ParGroup([a4, a3], {name: "p2"});
+    document.querySelector("#d"), effect, {duration: 2.0, fill: "forwards"});
+var pgroup1 = new ParGroup([a1, a2], {name: "p1", fill: "forwards"});
+var pgroup2 = new ParGroup([a4, a3], {name: "p2", fill: "forwards"});
 document.timeline.play(
-    new SeqGroup([pgroup1, pgroup2], {name: "s"}));
+    new SeqGroup([pgroup1, pgroup2], {name: "s", fill: "forwards"}));
 
 </script>
